# Val

./: .env  .gitattributes  .gitignore  Cargo.toml  ConfereOS.py  Excel_tbs.py  LICENSE  Makefile  MateriaisContratada.xlsx  README.md  SAPConfereConexao.py  SAPConnection.py  SAPConnection_n2.py  ServicosExecutados.py  TSE.xlsx  Testes-notebook.ipynb  Val.py  ZSBMM216.py  almoxarifado.py  avatar.py  classes_materiais.xlsx  confere_os.py  core.py  desvalorador.py  do_retrabalho.py  estoque.XLSX  etl.py  face_the_gandalf.py  insert_to_sql.py  lista.XLSX  lista_reposicao.py  main.py  osn3.py  pagador.py  pendentes_excel.py  pyproject.toml  release-stable.toml  requirements.txt  retrabalhador.py  retrabalho.bat  (+17 more)
.github/workflows/: pylint.yml  python-app.yml  release.yml  ruff.yml
.ipynb_checkpoints/: Testes-notebook-checkpoint.ipynb
VAL.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cesta/: cesta_dicionario.py
cesta/cavalete/: m_cavalete.py
cesta/itens_naovinculados/: itens_naovinculados.py  m_itens_naovinculados.py
cesta/rb_cavalete/: m_cavalete.py
ideas/Val/: 2024-07-29.md  COM Object Viewer.md  Classifier for Bloquete  on Leito  in Poa's City.md  Core.md  Create Function to create new connection and run inside it.md  Forbidden TSE 🚫.md  Log Result.md  Multiple SapSession.md  Novas Instâncias da Val.md  PyWin32.md  SAPConnection.md  SAPGUI.md  SapGuiScripting API.md  Send an Email 📩.md  TSE 332500 - Reparo de Rede De Água Não Visível.md  TSE 730600 - Compactação e Selagem da Base.md  Val.md  tb_valoradas.md
ideas/Val/.obsidian/: community-plugins.json  workspace.json
python/src/: __init__.py  almoxarifado.py  avatar.py  charging_sessions.py  confere_os.py  core.py  desvalorador.py  etl.py  excel_tbs.py  face_the_gandalf.py  lista_reposicao.py  log_config.py  log_decorator.py  nazare_bugou.py  osn3.py  pagador.py  process_options.py  retrabalhador.py  salvacao.py  sap.py  sap_connection.py  sapador.py  servicos_executados.py  sql_view.py  temporizador.py  transact_zsbmm216.py
python/src/cesta/: __init__.py  cesta_dicionario.py
python/src/test/: simple_tests.py  test_main.py
python/src/tsepai/: __init__.py  pai_dicionario.py  pais.py
python/src/unitarios/: __init__.py  base.py  controlador.py  dicionario.py  interfaces.py  localizador.py
python/src/wms/: __init__.py  cavalete_material.py  consulta_estoque.py  corte_restab_material.py  hidrometro_material.py  lacre_material.py  localiza_material.py  materiais_contratada.py  poco_material.py  rede_agua_material.py  rede_esgoto_material.py  testa_material_sap.py  warehouse.py
python/test/: Testes-notebook.ipynb  __init__.py  sandbox.ipynb  simple_tests.py  test_core.py  test_log_decorator.py  test_main.py  test_sap.py  test_sql_view.py
python/test/wms/: __init__.py  test_localiza_material.py
sheets/: Contratada_GB.xlsx  ItensPreco.xlsx  MateriaisContratada.xlsx  StatusOrdem.xlsx  TSE.xlsx  estoque.XLSX  estoque_4600041302.XLSX  estoque_4600056089.XLSX  lista.xlsx
src/: .env  __init__.py  almoxarifado.py  avatar.py  charging_sessions.py  confere_os.py  core.py  desvalorador.py  etl.py  excel_tbs.py  face_the_gandalf.py  lista_reposicao.py  main.py  main.rs  nazare_bugou.py  osn3.py  pagador.py  retrabalhador.py  salvacao.py  sap.py  sap_connection.py  sapador.py  servicos_executados.py  sql_view.py  temporizador.py  transact_zsbmm216.py
src/cesta/: cesta_dicionario.py
src/cesta/itens_naovinculados/: m_itens_naovinculados.py
src/test/: Testes-notebook.ipynb  __init__.py  sandbox.ipynb  simple_tests.py  test_main.py
src/tsepai/: pai_dicionario.py  pais.py
src/tsepai/pai_desobstrucao/: m_desobstrucao.py
src/unitarios/: base.py  controlador.py  dicionario.py  interfaces.py
src/unitarios/cavalete/: m_cavalete.py
src/unitarios/hidrometro/: m_hidrometro.py
src/unitarios/ligacao_agua/: m_ligacao_agua.py
src/unitarios/ligacao_esgoto/: m_ligacao_esgoto.py
src/unitarios/poco/: m_poco.py
src/unitarios/religacao/: __init__.py  m_religacao.py
src/unitarios/supressao/: m_supressao.py
src/wms/: cavalete_material.py  consulta_estoque.py  corte_restab_material.py  hidrometro_material.py  lacre_material.py  localiza_material.py  materiais_contratada.py  poco_material.py  rede_agua_material.py  rede_esgoto_material.py  testa_material_sap.py
tsepai/: pai_dicionario.py
tsepai/pai_cesta/pai_investimento/: m_tra_rb.py
tsepai/pai_cesta/pai_sondagem/: m_sondagem_rb.py
tsepai/pai_unitario/pai_cavalete/: m_cavalete.py
tsepai/pai_unitario/pai_hidrometro/: m_hidrometro.py
tsepai/pai_unitario/pai_ligacaoagua/: m_ligacao_agua_un.py
tsepai/pai_unitario/pai_ligacaoesgoto/: m_ligacao_esgoto_un.py
tsepai/pai_unitario/pai_poco/: m_poco.py
tsepai/pai_unitario/pai_religacao/: m_religacao.py
tsepai/pai_unitario/pai_supressao/: m_supressao.py
tsepai/unitario/cavalete/: m_cavalete.py
tsepai/unitario/hidrometro/: m_hidrometro.py
tsepai/unitario/religacao/: m_religacao.py
unitarios/: dicionario.py  localizador.py
unitarios/cavalete/: m_cavalete.py
unitarios/hidrometro/: m_hidrometro.py
unitarios/ligacao_agua/: m_ligacao_agua.py
unitarios/ligacao_esgoto/: m_ligacao_esgoto.py
unitarios/poco/: m_poco.py
unitarios/religacao/: __init__.py  m_religacao.py
unitarios/supressao/: m_supressao.py
wms/: cavalete_material.py  consulta_estoque.py  corte_restab_material.py  hidrometro_material.py  lacre_material.py  materiais_contratada.py  poco_material.py  ramal_agua_material.py  rede_agua_material.py  rede_esgoto_material.py  testa_material_sap.py
(+41 files in other folders)
