[tool.poetry]
package-mode = false
name = "Val"
version = "0.1.0"
description = "Val is a Python library for data validation for Sabesp's SAP orders."
authors = ["Hyslan Silva Cruz <hyslansilva@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hyslan/Val"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pywin32 = "^306"
sqlalchemy = "^2.0.32"
pyodbc = "^5.1.0"
numpy = "^2.1.0"
xlwings = "^0.32.1"
pygame = "^2.6.0"
imageio = "^2.35.1"
simpleaudio = "^1.0.4"
opencv-python = "^4.10.0.84"
pillow = "^10.4.0"
pydub = "^0.25.1"
rich = "^13.7.1"
tqdm = "^4.66.5"
selenium = "^4.23.1"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pyclean = "^3.0.0"
mypy = "^1.11.1"
ruff = "^0.6.2"

[tool.poetry.group.dev.dependencies]
poetry-types = "^0.5.1"
bandit = "^1.7.9"
ipython = "^8.26.0"


[tool.poetry.group.types.dependencies]
types-openpyxl = "^3.1.5.20240822"
pandas-stubs = "^2.2.2.240807"
types-tqdm = "^4.66.0.20240417"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "Val"
dynamic = ["version"]
requires-python = ">=3.12"

authors = [{ name = "Hyslan Silva Cruz", email = "hyslansilva@gmail.com" }]
description = "Val is a Python library for data validation for Sabesp's SAP orders."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["rpa", "automation", "data-validation", "sabesp", "sap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/hyslan/Val"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S603",
    "S607",
    "S101",
    "ANN401",
    "DTZ005",
    "FBT001",
    "FBT003",
    "PGH003",
    "PD901",
    "PLR0915",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "C901",
]

[tool.ruff]
line-length = 128

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pyright]
strict = true
include = ["**/*.py"]
exclude = [
    "**/__pycache__",
    "**/.ipynb_checkpoints",
    "**/build",
    "**/dist",
    "**/.venv",
    "**/.vscode",
    "**/.git",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/.tox",
    "**/.mypy",
]
pythonVersion = "3.12"
pythonPlatform = "Windows"

[tool.pytest.ini_options]
pythonpath = ["."]
